Terminada por completo la Fase 5 : Subida del zip
